--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,21 +3,25 @@
   <head>
     <title>Pauline</title>
     <%= csrf_meta_tags %>
-
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+<%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+<%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
-
+<div class="container">
+<ul class="nav nav-tabs">
   
-<%= link_to 'Home', root_path %>
-<%= link_to 'About Us', welcome_about_path %>
-<%= link_to 'Contact Us', welcome_contact_path %>
-<%= link_to 'FAQs', welcome_faq_path %>
-<%= link_to 'Features', welcome_features_path %>
-<%= link_to 'Pricing', welcome_pricing_path %>
-<%= link_to 'Login', welcome_login_path %>
+<li><%= link_to 'Home', root_path %>
+<li><%= link_to 'About Us', welcome_about_path %></li>
+<li><%= link_to 'Contact Us', welcome_contact_path %></li>
+<li><%= link_to 'FAQs', welcome_faq_path %></li>
+<li><%= link_to 'Features', welcome_features_path %></li>
+<li><%= link_to 'Pricing', welcome_pricing_path %></li>
+<li><%= link_to 'Login', welcome_login_path %></li>
+    </ul>
+    
     <%= yield %>
+</div>
+    </body>
   </body>
 </html>
